--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 Hello there, awesome person!
 <html>
+  <head> <title> web page </title>
+  </head>
   <body>
     Hello there, awesome person! 
   </body>
