--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ Hello there, awesome person!
   <head> <title> web page </title>
   </head>
   <body>
-    Hello there, awesome person! 
+    <h1>Hello there, awesome person!</h1> 
   </body>
 </html>
