--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ Hello there, awesome person!
   </head>
   <body>
     <h1>Hello there, awesome person!</h1>
-    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcoolbackgrounds.io%2F&psig=AOvVaw18keqLdddIG7mKu1PenvE8&ust=1650654151495000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCJDwzYjspfcCFQAAAAAdAAAAABAD">
+    <ol>
+     <li>This</li>
+     <li>Is an</li>
+     <li>Ordered list</li>
+    </ol>
   </body>
 </html>
