--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@ Hello there, awesome person!
   <body>
     <h1>Hello there, awesome person!</h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
+    <ol>
+      <li>one</li>
+      <li>two</li>
+      <li>three</li>
+    </ol>
+    <ul>
+     <li>apple</li>
+     <li>orange</li>
+     <li>mango</li>
+   </ul>
   </body>
 </html>
