--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 Hello there, awesome person!
 <html>
   <head> <title> web page </title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Hello there, awesome person!</h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
+    <a href="youtube.com">
   </body>
 </html>
